#5 day6 Adjustment of the mobile feature can only move within the same layer and cannot go to the sub-layer, as jumping too many layers will result in the parent layer being unreachable. Add the option to fill in marital status. Frontend data validation.

--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -114,9 +114,29 @@
                                             </div>
                                         </div>
                                         <div class="form-group row">
+                                            <label class="col-form-label col-sm-2 text-sm-right pt-sm-0">婚姻</label>
+                                            <div class="col-sm-8">
+                                                <label class="custom-control custom-radio custom-control-inline">
+                                                    <input name="custom-radio-3" type="radio" value="0" class="custom-control-input" checked>
+                                                    <span class="custom-control-label marry">未婚</span>
+                                                </label>
+                                                <label class="custom-control custom-radio custom-control-inline">
+                                                    <input name="custom-radio-3" type="radio" value="1" class="custom-control-input">
+                                                    <span class="custom-control-label marry">已婚</span>
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="form-group row spouseNameDiv">
+                                            <label class="col-form-label col-sm-2 text-sm-right">配偶姓名</label>
+                                            <div class="col-sm-8">
+                                                <input id="spouseName" name="spouseName" type="text" class="form-control" placeholder="請輸入配偶姓名，多个配偶请用,隔开">
+                                                <div class="clearfix"></div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
                                             <label class="col-form-label col-sm-2 text-sm-right">備註</label>
                                             <div class="col-sm-8">
-                                                <textarea name="customerbackup" class="form-control" placeholder="請輸入備註"></textarea>
+                                                <textarea id="remark" name="customerbackup" class="form-control" placeholder="請輸入備註"></textarea>
                                             </div>
                                         </div>
                                         <div class="form-group row">
