--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -109,7 +109,7 @@
                                         <div class="form-group row">
                                             <label class="col-form-label col-sm-2 text-sm-right">年齡</label>
                                             <div class="col-sm-8">
-                                                <input id="age" name="age" type="text" class="form-control" placeholder="請輸入年齡">
+                                                <input id="age" name="age" type="text" class="form-control" disabled>
                                                 <div class="clearfix"></div>
                                             </div>
                                         </div>
